# sig-benchmarks

./: README.md  pyproject.toml  run_benchmarks.py
adapters/python/: run_chen.py  run_keras_sig.py  run_pysiglib.py  run_signax.py  run_stochastax.py
config/: benchmark_sweep.yaml  libraries_registry.yaml
src/: orchestrator.py  plotting.py
src/common/: __init__.py  adapter.py  paths.py
tests/: test_branched_adapters.py
