[project]
name = "sig-benchmarks"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "matplotlib>=3.9.4",
    "numpy",
    "fbm>=0.3.0",
]

[project.optional-dependencies]
chen-signatures = [
    "chen-signatures==0.2.4",
    "torch",
]
iisignature = [
    "iisignature",
    "numpy"
]
pysiglib = [
    "pysiglib[cuda]>=3.0.3",
]
stochastax = [
    "jax[cuda]",
    "stochastax",
]
signax = [
    "jax[cuda]",
    "signax",
]
keras-sig = [
    "jax[cuda]",
    "keras_sig",
]
all = [
    "chen-signatures==0.2.4",
    # "iisignature",
    "fbm>=0.3.0",
    "jax[cuda]",
    "pysiglib[cuda]>=3.0.3",
    "stochastax",
    "signax",
    "keras_sig",
    "torch",
]

[tool.uv.sources]
stochastax = { git = "https://github.com/luke-a-thompson/Stochastax.git", branch = "ArbitraryDepthBranchedRP" }
keras_sig = { git = "https://github.com/remigenet/keras_sig.git" }
signax = { git = "https://github.com/anh-tong/signax" }

[tool.uv.extra-build-dependencies]
iisignature = ["numpy"]
